CHANGES IN VERSION 1.1.1
------------------------
 o Update README with uptodate installation instructions
   [2014-10-14 Tue]

CHANGES IN VERSION 1.0.0
------------------------
 o Release for Bioc 3.0 [2014-10-14 Tue]

CHANGES IN VERSION 0.99.12
--------------------------
 o added Video tag in DESCRIPTION [2014-10-07 Tue]

CHANGES IN VERSION 0.99.11
--------------------------
 o Add screenshot to README [2014-09-05 Fri]
 o fix bug when features of fois are not present 
 o move data tab to the end

CHANGES IN VERSION 0.99.10
--------------------------
 o Updated README [2014-09-04 Thu]
 o Remove old R code file [2014-09-04]

CHANGES IN VERSION 0.99.9
-------------------------
 o fix vignette error on Windows (Dan Tenenbaum) [2014-08-26 Tue]

CHANGES IN VERSION 0.99.8
-------------------------
 o selection and display of multiple features of interest in pRolocVis and
   pRolocComp [2014-08-13 Wed]

CHANGES IN VERSION 0.99.7
-------------------------
 o display feature meta-data instead of protein name when hovering
   [2014-07-27 Tue]
 o better feature highlighting [2014-07-27 Tue]
 o only 1 vignette [2014-07-27 Tue]

CHANGES IN VERSION 0.99.6
-------------------------
 o support mirroring of PCA plots in pRolocComp [2014-07-22 Tue]

CHANGES IN VERSION 0.99.5
-------------------------
 o Update to latest knitcitations version and fix vignette
   [2014-07-15 Tue]

CHANGES IN VERSION 0.99.4
-------------------------
 o add function pRolocComp [2014-06-24 Tue]

CHANGES IN VERSION 0.99.3
-------------------------
 o multiple objects can be passed to pRolocVis by using a list [2014-06-03 Tue] 
 o improve query search (submit and select check box) [2014-06-02 Mon]
 o add unit tests for helper functions and add manual unit test [2014-06-03 Tue]

CHANGES IN VERSION 0.99.2
------------------------
 o change access and assignment to object pRolocGUI_SearchResults in
   .GlobalEnv [2014-05-30 Fri]

CHANGES IN VERSION 0.99.1
-------------------------