@@ -2,6 +2,7 @@ CHANGES IN VERSION 1.1.1
 ------------------------
  o Update README with uptodate installation instructions
    [2014-10-14 Tue]
+ o handling and filtering missing value in input data [2014-10-21 Tue]
 
 CHANGES IN VERSION 1.0.0
 ------------------------
